# hunter_with_arm_robot

./: .gitignore  .gitmodules  COMPLETE_TECHNICAL_REVIEW.md  DIAGNOSTICS_SUMMARY.md  MM-README.md  QUICK_REFERENCE.md  README.md  ROOT_CAUSE_AND_FIX.md
.ai-docs/: 2026JAN07-FixGripperSummary.txt  CHANGES_DETAILED.md  EXECUTIVE_SUMMARY.md  FIX_VERIFICATION.md  GRIPPER_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  QUICK_FIX.md  QUICK_START.txt  README.md  ROBOTIQ_GRIPPER_DIAGNOSTICS.md  SPLIT_BRAIN_FIX.md  TECHNICAL_REVIEW.md  TESTING_GUIDE.md  test_gripper.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: build_workspace.sh  post-create.sh  post_create.sh  startup.sh  vnc.sh
hunter_with_arm_description/: CHANGELOG.rst  package.xml
hunter_with_arm_description/launch/: launch_sim.launch.py  robot_view.launch.py
hunter_with_arm_gazebo/: package.xml
mobile_manipulator_pltf_bringup/config/: mobile_manipulator.urdf.xacro  moveit.rviz  ur.urdf.xacro
mobile_manipulator_pltf_bringup/launch/: demo.launch.py  mobile_manipulator_pltf_bringup.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
mobile_manipulator_pltf_description/: CMakeLists.txt  package.xml
mobile_manipulator_pltf_description/description/: camera.xacro  depth_camera.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  mobile_manipulator_pltf.urdf.xacro  mobile_manipulator_pltf_macro.xacro  mobile_manipulator_pltf_org.urdf.xacro  mobile_manipulator_pltf_v01.urdf.xacro  robotiq_gripper.ros2_control.xacro  robotiq_gripper_macro.xacro  ur5.ros2_control.xacro  ur5_camera_gripper_pltf.urdf.xacro  ur5_macro.xacro  zed_multi.urdf.xacro
mobile_manipulator_pltf_description/launch/: launch_sim.launch.py  pltf_rsp.launch.py  sim_bringup.launch.py  ur_classic_control.launch.py  ur_classic_moveit.launch.py
mobile_manipulator_pltf_description/meshes/: zed2.dae
mobile_manipulator_pltf_gazebo/launch/: launch_sim.launch.py
src/hunter_with_arm_description/: CMakeLists.txt  package.xml
src/hunter_with_arm_description/description/: gazebo_ros2_control_plugin.xacro  meshes.xacro  ros2_control.xacro
src/hunter_with_arm_description/launch/: robot_view.launch.py
src/hunter_with_arm_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/hunter_with_arm_gazebo/launch/: launch_sim.launch.py
src/mobile_manipulator_pltf_bringup/: CMakeLists.txt  package.xml
src/mobile_manipulator_pltf_bringup/config/: ur.srdf  ur.urdf.xacro
src/mobile_manipulator_pltf_bringup/launch/: demo.launch.py  mobile_manipulator_pltf_bringup.launch.py  moveit_rviz.launch.py  rsp.launch.py
src/mobile_manipulator_pltf_description/: CMakeLists.txt  package.xml
src/mobile_manipulator_pltf_description/config/: ur5_controllers_gripper.yaml
src/mobile_manipulator_pltf_description/description/: camera.xacro  gps.urdf.xacro  mid360.xacro  mobile_manipulator_pltf.urdf.xacro  mobile_manipulator_pltf_org.urdf.xacro  mobile_manipulator_pltf_v01.urdf.xacro  mobile_manipulator_pltf_v02.urdf.xacro  ur5_camera.urdf.xacro  ur5_camera_gripper.urdf.xacro
src/mobile_manipulator_pltf_description/launch/: pltf_rsp.launch.py
src/mobile_manipulator_pltf_gazebo/: CMakeLists.txt  package.xml
src/mobile_manipulator_pltf_gazebo/launch/: launch_sim.launch.py  launch_sim_org.launch.py  launch_sim_v01.launch.py  ur_classic_control.launch.py  ur_classic_moveit.launch.py
