<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_manipulator_pltf_description</name>
  <version>0.0.1</version>
  <description>Mobile manipulator platform description package, part of the Agri-OpenCore (AOC) project</description>
  <maintainer email="ayilmaz@lincoln.ac.uk">ayilmaz</maintainer>
  <author email="ayilmaz@lincoln.ac.uk">ayilmaz</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>hunter_with_arm_description</exec_depend>
  <exec_depend>ur_description</exec_depend>

  <depend>xacro</depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- Gazebo simulation dependencies (merged from mobile_manipulator_pltf_gazebo) -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros  gazebo_model_path = "${prefix}/../"/>
  </export>
</package>
