<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mobile_manipulator_pltf_gazebo</name>
  <version>0.0.0</version>
  <description>Mobile manipulator platform simulation package for Gazebo classic, part of the Agri-OpenCore (AOC) project</description>
  <maintainer email="ayilmaz@lincoln.ac.uk">ayilmaz</maintainer>
  <author email="ayilmaz@lincoln.ac.uk">ayilmaz</author>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>mobile_manipulator_pltf_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
